gdk/x11/gdkdisplay-x11.c
@@ -1737,7 +1737,8 @@ device_grab_update_callback (GdkDisplay *display,
 
   pointer_info = _gdk_display_get_pointer_info (display, device);
   _gdk_display_device_grab_update (display, device,
-                                   pointer_info->last_slave, serial);
+                                   pointer_info->last_slave ? pointer_info->last_slave : device,
+                                   serial);
 }
 
 #define XSERVER_TIME_IS_LATER(time1, time2)                        \
